testsuite/bsc.interra/messages/EResources/EResources.bs.bsc-vcomp-out.expected
checking package dependencies
compiling EResources.bs
code generation for subtractor starts
Verilog file created: subtractor.v
code generation for mkDifference starts
Error: "EResources.bs", line 43, column 13: (G0002)
  `m.minus' needs more than 1 ports for the following uses:
      `m.minus b__h230 b__h231' at "EResources.bs", line 43, column 13
      `m.minus b__h231 b__h230' at "EResources.bs", line 43, column 13
